--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cordova-plugin-ionic-webview",
-  "version": "5.0.0",
-  "description": "Ionic Web View Engine Plugin",
+  "name": "@moodlehq/cordova-plugin-ionic-webview",
+  "version": "5.0.0-moodle.1",
+  "description": "Moodle's fork of Ionic Web View Engine Plugin",
   "scripts": {
     "sync_plugin_xml": "sync-cordova-xml package.json plugin.xml --output=plugin.xml",
     "version": "npm run sync_plugin_xml && git add plugin.xml",
@@ -9,10 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/cordova-plugin-ionic-webview"
+    "url": "https://github.com/moodlemobile/cordova-plugin-ionic-webview"
   },
   "bugs": {
-    "url": "https://github.com/ionic-team/cordova-plugin-ionic-webview/issues"
+    "url": "https://github.com/moodlemobile/cordova-plugin-ionic-webview/issues"
   },
   "keywords": [
     "cordova",
